# auraClasificadores

./: compilar.sh
Clasificador_DCL_vs_control/: .~lock.excel.csv#  CMakeCache.txt  Clasificador_DCL_vs_control_rtw.bat  Clasificador_DCL_vs_control_rtw.mk  Clasificador_DCL_vs_control_rtw.rsp  Makefile  buildInfo.mat  cmake_install.cmake  codeInfo.mat  ejecutable  gcGuiReport.mat  rtw_proj.tmw
Clasificador_DCL_vs_control/src/: CMakeCache.txt  CMakeLists.txt  Clasificador_DCL_vs_control.c  Clasificador_DCL_vs_control_emxAPI.c  Clasificador_DCL_vs_control_emxutil.c  Clasificador_DCL_vs_control_initialize.c  Clasificador_DCL_vs_control_terminate.c  CompactSVM.c  Gaussian.c  Makefile  cmake_install.cmake  excel.csv  main  main.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
Clasificador_DFT_vs_control/: CMakeCache.txt  Clasificador_DFT_vs_control_rtw.bat  Clasificador_DFT_vs_control_rtw.mk  Clasificador_DFT_vs_control_rtw.rsp  Makefile  buildInfo.mat  cmake_install.cmake  codeInfo.mat  gcGuiReport.mat  rtw_proj.tmw
Clasificador_DFT_vs_control/src/: CMakeCache.txt  CMakeLists.txt  Clasificador_DFT_vs_control.c  Clasificador_DFT_vs_control_emxAPI.c  Clasificador_DFT_vs_control_emxutil.c  Clasificador_DFT_vs_control_initialize.c  Clasificador_DFT_vs_control_terminate.c  CompactClassificationSVM.c  Makefile  Poly.c  cmake_install.cmake  main  main.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
Clasificador_EA_vs_control/: CMakeCache.txt  Makefile  (+8 more)
Clasificador_EA_vs_control/src/: CMakeCache.txt  CMakeLists.txt  Clasificador_EA_vs_control.c  Clasificador_EA_vs_control_emxAPI.c  Clasificador_EA_vs_control_emxutil.c  Clasificador_EA_vs_control_initialize.c  Clasificador_EA_vs_control_terminate.c  CompactSVM.c  Linear.c  Makefile  cmake_install.cmake  excel.csv  main  main.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
Clasificador_EHM_vs_control/src/: CMakeLists.txt  Clasificador_EHM_vs_control.c  Clasificador_EHM_vs_control_emxAPI.c  Clasificador_EHM_vs_control_emxutil.c  Clasificador_EHM_vs_control_initialize.c  Clasificador_EHM_vs_control_terminate.c  ClassificationKNN.c  Estudio_MCI.csv  Makefile  cmake_install.cmake  eps.c  knnsearch.c  main  main.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c  sort1.c  sortIdx.c
Clasificador_Parkinsionismos_vs_control/src/: CMakeCache.txt  CMakeLists.txt  Clasificador_Parkinsionismos_vs_control.c  Clasificador_Parkinsionismos_vs_control_emxAPI.c  Clasificador_Parkinsionismos_vs_control_emxutil.c  Clasificador_Parkinsionismos_vs_control_initialize.c  Clasificador_Parkinsionismos_vs_control_terminate.c  CompactClassificationTree.c  Makefile  cmake_install.cmake  excel.csv  main  main.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
Clasificador_Parkinson_vs_control/src/: CMakeCache.txt  CMakeLists.txt  Clasificador_Parkinson_vs_control.c  Clasificador_Parkinson_vs_control_emxAPI.c  Clasificador_Parkinson_vs_control_emxutil.c  Clasificador_Parkinson_vs_control_initialize.c  Clasificador_Parkinson_vs_control_terminate.c  CompactSVM.c  Makefile  Poly.c  cmake_install.cmake  main  main.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
(+164 files in other folders)
